--- a/styles/global.css
+++ b/styles/global.css
@@ -28,3 +28,20 @@ body{
     font: var(--text);
 
 }
+a{
+    text-decoration: none;
+    color: inherit;
+}
+a:hover{
+    text-decoration: var(--brand-color);
+    text-decoration: underline;
+}
+.container{
+    padding-inline: 32px;
+    max-width: 1280px;
+    margin-inline: auto;
+    
+}
+.bg-surface-color{
+    background-color: var(--surface-color);
+}
